// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders border correctly when specified as an option 1`] = `
<DocumentFragment>
  .emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  border: 0.5px solid #B8C4C2;
  width: 100%;
  border-radius: 4px;
  max-width: 100%;
}

<div
    class="figure emotion-1"
    style="width: 700px;"
  >
    <img
      alt="/images/firstcluster.png"
      class="   emotion-0"
      src="/images/firstcluster.png"
    />
  </div>
</DocumentFragment>
`;

exports[`renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  max-width: 100%;
}

.emotion-0 {
  max-width: 100%;
}

<div
    class="figure emotion-1"
    style="width: 700px;"
  >
    <img
      alt="/images/firstcluster.png"
      class="   emotion-0"
      src="/images/firstcluster.png"
    />
  </div>
</DocumentFragment>
`;

exports[`renders lightbox correctly when specified as an option 1`] = `
<DocumentFragment>
  .emotion-0 {
  max-width: 100%;
}

.emotion-3 {
  width: 700px;
  cursor: pointer;
  margin: 0;
  display: block;
}

.emotion-1 {
  color: #444;
  font-size: 80%;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  text-align: center;
}

<div
    class="emotion-3 emotion-4"
  >
    <div
      role="button"
      tabindex="-1"
    >
      <img
        alt="/images/firstcluster.png"
        class="   emotion-0"
        src="/images/firstcluster.png"
      />
      <div
        class="emotion-1 emotion-2"
      >
        click to enlarge
      </div>
    </div>
  </div>
</DocumentFragment>
`;
